--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+    <head lang="en">
+        <meta charset="UTF-8">
+        <title>Farmers Market!</title>
 
-</body>
+        <link href="styles.css" rel="stylesheet">
+    </head>
+
+    <body>
+
+        
+
+    </body>
 </html>
