Create document structure

--- a/index.html
+++ b/index.html
@@ -2,14 +2,42 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>Farmers Market!</title>
+        <title>Farmer's Market!</title>
 
         <link href="styles.css" rel="stylesheet">
     </head>
 
     <body>
 
-        
+        <a href="/." title="Return to Home Page" id="logo">
+            <img src="images/market_logo.png"
+                alt="Sunshine Annual Farmer's Market">
+        </a>
+
+        <div id="container">
+
+            <div id="main-content">
+                <div id="special-offer">
+
+                </div>
+            </div>
+
+            <div id="sidebar">
+                <div class="widget">
+
+                </div>
+
+                <div class="widget">
+
+                </div>
+
+                <div class="widget">
+
+                </div>
+
+            </div>
+
+        </div><!-- end container -->
 
     </body>
 </html>
