Fill all html structure

--- a/index.html
+++ b/index.html
@@ -17,22 +17,50 @@
         <div id="container">
 
             <div id="main-content">
-                <div id="special-offer">
 
+                <h1>Welcome to Sunshine!</h1>
+
+                <p class="lead">Etiam dapibus rutrum quam, id ullamcorper mauris
+                    convallis eget. Duis sollicitudin turpis quis massa pretium
+                    vehicula a nec tortor. Aenean laoreet eu lorem nec ultricies.
+                </p>
+
+                <div id="special-offer">
+                    <h2>Special Offer!</h2>
+                    <p>Buy 10 cuts of meat and get 10 cuts free!</p>
                 </div>
+
+                <img src="images/steak.png" alt="A juicy steak!">
             </div>
 
             <div id="sidebar">
                 <div class="widget">
+                    <h3>Our Location</h3>
+                    <address>
+                        <ul>
+                            <li>188 Farmers Terrace</li>
+                            <li>Farmtown, Somewhere</li>
+                        </ul>
+                    </address>
 
                 </div>
 
                 <div class="widget">
+                    <h3>Our Mission</h3>
 
+                    <p>To bring you the freshest, finest
+                        quality whole foods our farms can make!
+                    </p>
                 </div>
 
                 <div class="widget">
+                    <h3>Contact us</h3>
 
+                    <p>Send us an email at:</p>
+
+                    <a href="mailto:farmers@mail.com?cc=example@mail.com&subject=Hi%20there!&body=Hello%20guys!">
+                        farmers@mail.com
+                    </a>
                 </div>
 
             </div>
