--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
 
                 <div id="special-offer">
                     <h2>Special Offer!</h2>
-                    <p>Buy 10 cuts of meat and get 10 cuts free!</p>
+
+                    <p>Buy 10 cuts of meat and get 10 cuts free!
+                        Etiam dapibus rutrum quam, id ullamcorper mauris
+                        convallis eget.
+                    </p>
+
+                    <img src="images/steak.png" alt="A juicy steak!" id="steak">
                 </div>
 
-                <img src="images/steak.png" alt="A juicy steak!">
             </div>
 
             <div id="sidebar">
